finshed design of first card except the buy button

--- a/sass/abstracts/variables.scss
+++ b/sass/abstracts/variables.scss
@@ -1,1 +1,14 @@
 $main-font-family: 'Bad Script', cursive;
+
+$primary-color: #ee9ca7cc;
+$primary-color-light: #ffdbdfb3;
+
+$white-color: #f5f6fa;
+
+
+
+// grid variables
+$gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
+$gutter-horizontal: 6rem;
+$grid-width: 114rem;
