--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body {
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     overflow: hidden; }
     .card__picture--1 {
-      background-image: url(../images/pizza-party.jpg), linear-gradient(to right bottom, rgba(247, 247, 247, 0.7), rgba(247, 247, 247, 0.9)); }
+      background-image: url(../images/pizza-party.jpg), linear-gradient(to right bottom, rgba(247, 247, 247, 0.5), rgba(247, 247, 247, 0.5)); }
   .card__heading {
     font-size: 2.2rem;
     font-weight: 300;
@@ -123,6 +123,58 @@ body {
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
     transform: rotateY(0); }
+
+.btn, .btn:link, .btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 1.7rem;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  border-radius: 3rem;
+  position: relative;
+  transition: all .2s;
+  border: none;
+  cursor: pointer; }
+
+.btn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+  .btn:hover::after {
+    transform: scaleX(1.5) scaleY(1.8);
+    opacity: 0; }
+
+.btn:active, .btn:focus {
+  outline: none;
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.btn:after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 10rem;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  position: absolute;
+  transition: all .4s; }
+
+.btn--white {
+  background-color: #f5f6fa;
+  color: #ee9ca7cc; }
+  .btn--white::after {
+    background-color: #f5f6fa; }
+
+.btn--primary {
+  background-color: #ee9ca7cc;
+  color: #f5f6fa; }
+  .btn--primary::after {
+    background-color: #ee9ca7cc; }
+
+.btn--animated {
+  animation: moveInBottom 1s .3s ease-in;
+  animation-fill-mode: backwards; }
 
 .section-buy-now-cards {
   height: auto;
